# LoveACE

./: .cirun.yml  .gitattributes  .gitignore  .impeccable.md  .pubrc  CHANGELOG.txt  LICENSE  README.md  encrypt_cli.py  main.py  pubspec.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  internal_task.yml
.github/workflows/: build-android.yml  build-apk.yml  build-desktop-macos.yml  build-desktop-windows.yml  build-ios.yml  build-macos.yml  build-windows.yml  deploy-analytics-worker.yml  deploy-analytics.yml  deploy-release-metadata.yml  diagnose-analytics.yml  run-analytics-maintenance.yml  sync-semesters.yml
analytics-worker/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
analytics-worker/migrations/: 0004_bi_indexes.sql  0005_rollup_tables.sql
analytics-worker/public/: bi.html  smart-select.html
analytics-worker/scripts/: backfill-rollups-archive.mjs  send-test-event.mjs
analytics-worker/src/: index.ts
android/: AGENTS.md  build.gradle.kts
android/app/: build.gradle.kts
android/downloads/: ios.html
desktop/: .gitignore  pubspec.yaml
docs/: API_DOCSTRING_GUIDELINE.md
ios/: Podfile
lib/: main.dart
linux/: CMakeLists.txt
utils/: .env.example  README.md  cli.py  config.py  download.html  manifest.py  pyproject.toml  s3_client.py
utils/manifest_v2/: .env.example  README.md  cli.py  config.py  download.html  download_page_v2.html  manifest.py  pyproject.toml  s3_client.py  semesters.json
utils/manifest_v2/tests/: test_manifest.py
web/: index.html  manifest.json
windows/: inno-ci.iss
(+498 files in other folders)
