[project]
name = "loveace-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.2.0",
    "aiofiles>=25.1.0",
    "aiomysql>=0.2.0",
    "bs4>=0.0.2",
    "cryptography>=46.0.1",
    "fastapi>=0.117.1",
    "granian[pname,uvloop,winloop]>=2.5.5",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "mkdocs-material>=9.6.20",
    "multidict>=6.7.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "richuru>=0.1.1",
    "sqlalchemy[aiomysql]>=2.0.43",
    "types-aiobotocore-s3>=2.25.0",
    "ujson>=5.11.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "ruff>=0.13.2",
    "textual>=6.3.0",
]
