[project]
name = "loveace-manifest-v2"
version = "0.1.0"
description = "LoveACE release manifest and download page publisher"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opendal>=0.46.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]
